# plugin-lights

./: .gitignore  Cargo.toml  Makefile  README.md  config.json  debug.sh  pair-debug.sh  pair.sh  plugin.toml  qol-config.toml  qol-runtime.toml  toggle-debug.sh
.github/workflows/: version.yml
.superpowers/brainstorm/13891-1774030078/: .server-stopped  wheel-layout-v2.html  wheel-layout-v3.html  wheel-layout-v4.html  wheel-layout-v5.html  wheel-layout.html
docs/superpowers/plans/: 2026-03-20-color-wheel.md
docs/superpowers/specs/: 2026-03-20-color-wheel-design.md
src/: lib.rs  main.rs
src/backend/: mod.rs
src/backend/zigbee/: mod.rs
src/config/: mod.rs  model.rs  store.rs  validation.rs
src/daemon/: mod.rs  state.rs  ws.rs
src/domain/: model.rs
src/platform/: linux.rs  macos.rs  mod.rs
src/runtime/: actions.rs  mod.rs
src/service/: light_service.rs  mod.rs
src/znp/: controller.rs  coordinator.rs  device.rs  dongle.rs  error.rs  frame.rs  mod.rs  request.rs  subsystem.rs  transport.rs
src/znp/zcl/: color.rs  level.rs  mod.rs  on_off.rs
ui/: app.js  index.html  style.css
ui/components/: hue-wheel.js
