[package]
name = "plugin-lights"
version = "1.1.2"
edition = "2021"

[dependencies]
anyhow = "1"
crossbeam-channel = "0.5"
getrandom = "0.2"
serde = { version = "1", features = ["derive"] }
log = "0.4"
serde_json = "1"
serialport = { version = "4", default-features = false }
tungstenite = "0.26"

[profile.release]
strip = true
lto = true
codegen-units = 1

[dev-dependencies]
qol-tray = { git = "https://github.com/qol-tools/qol-tray" }
toml = "0.9"
